Fix de bugs en favoritos, trabajando en demo login y filtrado en favs

--- a/front/src/styles/Cards.module.css
+++ b/front/src/styles/Cards.module.css
@@ -2,9 +2,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    flex: 1 1 100%;
     align-items: center;
     margin-bottom: auto;
+}
+
+.barsContainer{
+    width: 100%;
+    margin-bottom: auto;
+
 }
 
 .btnPagination{
