--- a/front/src/styles/Form.module.css
+++ b/front/src/styles/Form.module.css
@@ -1,7 +1,7 @@
 .formContainer{
     align-self: flex-end;
     color: #fff;
-    margin-bottom: 90px;
+    margin-bottom: 10px;
 }
 
 .formContainer form label{
@@ -11,15 +11,41 @@
 }
 
 .inputBorder{
-    height: 25px;
-    width: 185px;
+    display: inline-block;
+    padding: 1px;
+    width: 230px;
     border-radius: 20px;
     background-color: #3F9112;
+
+}
+
+.errorMessage{
+
+    background-color: rgb(206, 14, 14);
+    border-radius: 20px;
+    padding: 5px;
+   
 }
 
 .formContainer form input{
     height: 20px;
-    width: 180px;
+    width: 225px;
     border-radius: 20px;
     background-color: #EAD815;
+  
+}
+
+.formContainer form button{
+    font-size: 20px;
+    font-weight: 550;
+    color: #000;
+    padding: 10px;
+    width: 225px;
+    border-radius: 20px;
+    background-color: #EAD815;
+
+}
+
+.lastElement{
+    margin-bottom: 15px;
 }
