--- a/front/src/styles/SearchBar.module.css
+++ b/front/src/styles/SearchBar.module.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: row;
     place-content: center;
+  
 }
 
 .barContainer input{
@@ -10,6 +11,7 @@
     padding: 5px;
     margin-top: 20px;
     margin-right: 10px;
+    border: 3px #3F9112 solid;
 }
 
 .barContainer button{
