--- a/front/src/styles/Error.module.css
+++ b/front/src/styles/Error.module.css
@@ -1,13 +1,21 @@
 .errorContainer{
-    width: 50%;
+    width: 100%;
     background-color: #f5ea77;
     border-radius: 20px;
     border: 3px #3F9112 solid;
     color: rgb(206, 10, 10);
-    margin-top: 150px;
+
+}
+
+.errorFavourite{
+    flex: auto;
+    display: contents;
 }
 
 .imgContainer{
-    position: absolute;
-    top: 100px;
+    margin-bottom: auto;
+}
+
+.imgContainer img{
+    width: 100%;
 }
