--- a/front/src/styles/MainPage.module.css
+++ b/front/src/styles/MainPage.module.css
@@ -49,3 +49,26 @@
 .indexRick{
     height: 100%;
 }
+
+@media (max-width: 1000px) {
+
+    .logoBox{
+        width: 100%;
+        align-items: flex-start;
+    }
+
+    .contentContainer{
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    img{
+        width: 100%;
+    }
+
+    .rickContainer{
+        width: 100%;
+        height: 300px;
+    }
+}
